--- a/index.html
+++ b/index.html
@@ -8,27 +8,39 @@
   </head>
   <body>
     <div class="main">
+      <div class="btn-grp">
+        <button class="btn btn1">in</button>
+        <button class="btn btn2">user</button>
+        <button class="btn btn3">true</button>
+        <button class="btn btn4">false</button>
+        <button class="btn btn5">clear</button>
+      </div>
+
       <div class="in">
         <h1 class="in__title">Заказать забор</h1>
         <div class="wrapper">
           <div class="in__width">
-            <span class="in__width-subtitle">Длина забора</span>
+            <span class="input-subtitle">Длина забора</span>
             <input
               type="text"
-              class="input-in input-in__width"
+              class="input input-border-false"
               placeholder="0"
             />
             <span class="in__width-m">метров</span>
+            <span class="check"></span>
+            <span class="input-text-false">Неверно заполненное поле</span>
           </div>
 
           <div class="in__height">
-            <span class="in__height-subtitle">Высота забора</span>
+            <span class="input-subtitle">Высота забора</span>
             <input
               type="text"
-              class="input-in input-in__height"
+              class="input input-border-false"
               placeholder="0"
             />
             <span class="in__height-m">метров</span>
+            <span class="check"></span>
+            <span class="input-text-false">Неверно заполненное поле</span>
           </div>
 
           <div class="in__select">
@@ -86,6 +98,7 @@
                 >
               </div>
             </div>
+            <span class="check"></span>
           </div>
 
           <div class="in__check">
@@ -105,6 +118,47 @@
           <button class="button-in__next button-in__next-false">
             <span class="button-in__next-text">ДАЛЕЕ</span>
           </button>
+        </div>
+      </div>
+      <div class="user">
+        <h2 class="user__title">Пожалуйста, представьтесь</h1>
+        <div class="wrapper">
+          <div class="user__name">
+            <span class="input-subtitel">Ваше имя</span>
+            <input
+              type="text"
+              class="input input-user input-border-false"
+              placeholder=""
+            />
+            <span class="check"></span>
+            <span class="input-text-false">Неверно заполненное поле</span>
+          </div>
+
+          <div class="user__mail">
+            <span class="input-subtitel">Электронная почта</span>
+            <input
+              type="text"
+              class="input input-user input-border-false"
+              placeholder=""
+            />
+            <span class="check"></span>
+            <span class="input-text-false">Неверно заполненное поле</span>
+          </div>
+
+          <div class="user__phone">
+            <span class="input-subtitel">Телефон</span>
+            <input
+              type="text"
+              class="input input-user input-user__phone input-border-false"
+              placeholder="+7 (___) ___ - __ - __"
+            />
+            <span class="check"></span>
+            <span class="input-text-false">Неверно заполненное поле</span>
+          </div>
+
+          <div class="user__order">Вы укомплектовали забор<span class="user__width"></span> и <span class="user__height"></span> из материала <span class="user__material"></span> на сумму <span class="user__total"></span></div>
+
+          <button class="button-user__send">ОТПРАВИТЬ</button>
         </div>
       </div>
     </div>
