--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
       <div class="btn-grp">
         <button class="btn btn1">in</button>
         <button class="btn btn2">user</button>
-        <button class="btn btn3">true</button>
-        <button class="btn btn4">false</button>
-        <button class="btn btn5">clear</button>
+        <button class="btn btn3">out</button>
+        <button class="btn btn4">true</button>
+        <button class="btn btn5">false</button>
+        <button class="btn btn6">clear</button>
       </div>
 
       <div class="in">
         <h1 class="in__title">Заказать забор</h1>
-        <div class="wrapper">
+        <form class="wrapper">
           <div class="in__width">
             <span class="input-subtitle">Длина забора</span>
             <input
-              type="text"
-              class="input input-border-false"
+              type="number"
+              class="input input-width"
               placeholder="0"
             />
             <span class="in__width-m">метров</span>
@@ -34,8 +35,8 @@
           <div class="in__height">
             <span class="input-subtitle">Высота забора</span>
             <input
-              type="text"
-              class="input input-border-false"
+              type="number"
+              class="input input-height"
               placeholder="0"
             />
             <span class="in__height-m">метров</span>
@@ -115,10 +116,10 @@
             Сумма заказа: <span class="in__total-sum">0 ₽</span>
           </div>
 
-          <button class="button-in__next button-in__next-false">
+          <button type="button" class="button-in__next button-in__next-false">
             <span class="button-in__next-text">ДАЛЕЕ</span>
           </button>
-        </div>
+        </form>
       </div>
       <div class="user">
         <h2 class="user__title">Пожалуйста, представьтесь</h1>
@@ -127,7 +128,7 @@
             <span class="input-subtitel">Ваше имя</span>
             <input
               type="text"
-              class="input input-user input-border-false"
+              class="input input-user"
               placeholder=""
             />
             <span class="check"></span>
@@ -138,7 +139,7 @@
             <span class="input-subtitel">Электронная почта</span>
             <input
               type="text"
-              class="input input-user input-border-false"
+              class="input input-user"
               placeholder=""
             />
             <span class="check"></span>
@@ -149,7 +150,7 @@
             <span class="input-subtitel">Телефон</span>
             <input
               type="text"
-              class="input input-user input-user__phone input-border-false"
+              class="input input-user input-user__phone"
               placeholder="+7 (___) ___ - __ - __"
             />
             <span class="check"></span>
@@ -159,6 +160,14 @@
           <div class="user__order">Вы укомплектовали забор<span class="user__width"></span> и <span class="user__height"></span> из материала <span class="user__material"></span> на сумму <span class="user__total"></span></div>
 
           <button class="button-user__send">ОТПРАВИТЬ</button>
+        </div>
+      </div>
+
+      <div class="out">
+        <div class="out__wrapper">
+          <h2 class="out__title"><span class="out__name">Nicki</span>,<br>заказ <span class="out__number">№2020</span> сформирован!</h2>
+          <div class="out__mail">Мы повторили его комплектацию на почту<br><span class="out__mail-user">mail@mail</span></div>
+          <div class="out__phone">В ближайшее время наш специалист<br>свяжется с вами по телефону<br><span class="out__phone-user">123456</span></div>
         </div>
       </div>
     </div>
