улучшил js первой страницы, осталась недоработка с инпутом монтажа

--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
             Сумма заказа: <span class="in__total-sum">0 ₽</span>
           </div>
 
-          <button type="button" class="button-in__next button-in__next-false">
+          <button type="button" class="button-in__next-false">
+            <span class="button-in__next-text">ДАЛЕЕ</span>
+          </button>
+          <button type="button" class="button-in__next-true">
             <span class="button-in__next-text">ДАЛЕЕ</span>
           </button>
         </form>
