--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
           </div>
 
           <div class="in__total">
-            Сумма заказа: <span class="in__total-sum">0 ₽</span>
+            <span class="in__total-text">Сумма заказа:</span>
+            <span class="in__total-sum">0 ₽</span>
+            <div class="in__total-sum-l"></div>
           </div>
 
           <button type="button" class="button-in__next-false">
@@ -167,7 +169,16 @@
             <span class="input-text-false">Неверно заполненное поле</span>
           </div>
 
-          <div class="user__order">Вы укомплектовали забор <span class="user__width"></span> и <span class="user__height"></span> из материала <span class="user__material"></span> на сумму <span class="user__total"></span></div>
+          <div class="user__order">
+            Вы укомплектовали забор<br>
+            <span class="user__width"></span>
+            и 
+            <span class="user__height"></span>
+            из материала 
+            <span class="user__material"></span>
+            на сумму 
+            <span class="user__total"></span>
+          </div>
 
           <button type="button" class="button-user__send">ОТПРАВИТЬ</button>
         </div>
