версия без служебных кнопок

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="main">
-      <div class="btn-grp">
+      <!-- служебные кнопки -->
+      <!-- <div class="btn-grp">
         <button class="btn btn1">in</button>
         <button class="btn btn2">user</button>
         <button class="btn btn3">out</button>
@@ -17,8 +18,7 @@
         <button class="btn btn6">clear</button>
         <button class="btn btn7">enter</button>
         <button class="btn btn8">del</button>
-      </div>
-
+      </div> -->
       <div class="in">
         <h1 class="in__title">Заказать забор</h1>
         <form class="wrapper">
