--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="main">
-      <!-- служебные кнопки -->
+      <!-- служебные кнопки переключения окон и состояний -->
       <!-- <div class="btn-grp">
         <button class="btn btn1">in</button>
         <button class="btn btn2">user</button>
@@ -21,7 +21,7 @@
       </div> -->
       <div class="in">
         <h1 class="in__title">Заказать забор</h1>
-        <form class="wrapper">
+        <div class="wrapper">
           <div class="in__width">
             <label>
               <span class="input-subtitle">Длина забора</span>
@@ -132,9 +132,10 @@
           <button type="button" class="button-in__next-true">
             <span class="button-in__next-text">ДАЛЕЕ</span>
           </button>
-        </form>
+        </div>
       </div>
       <div class="user">
+        <button class="button-user__back">Вернуться</button>
         <h2 class="user__title">Пожалуйста, представьтесь</h2>
         <div class="wrapper">
           <div class="user__name">
@@ -144,7 +145,6 @@
                 type="text"
                 class="input input-user"
                 placeholder=""
-                minlength="2"
                 maxlength="20"
               />
               <span class="check"></span>
@@ -190,12 +190,13 @@
             <span class="user__total"></span>
           </div>
 
-          <button type="button" class="button-user__send">ОТПРАВИТЬ</button>
+          <button type="button" disabled="disabled" class="button-user__send">ОТПРАВИТЬ</button>
         </div>
       </div>
 
       <div class="out">
         <div class="out__wrapper">
+          <button class="button-out__close">Закрыть</button>
           <h2 class="out__title">
             <span class="out__name">Уважаемы покупатель</span>,<br />заказ
             <span class="out__number">№2020</span> сформирован!
